--- a/index.html
+++ b/index.html
@@ -4,18 +4,19 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <menu>
-    <a href="index.html">Главная</a>
-    <a href="catalog/catalog.html">Каталог</a>
-    <a href="#">Контакты</a>
+    <a href="index.html" class="menuItem">Главная</a>
+    <a href="catalog/catalog.html" class="menuItem">Каталог</a>
+    <a href="#" class="menuItem">Контакты</a>
   </menu>
-  <h1>Главная страница</h1>
-  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit nihil, ad ducimus explicabo distinctio doloremque, quis obcaecati, similique fugit aperiam beatae maxime velit sequi modi eum tenetur illum quaerat ipsam.</p>
-  <h2>Добро пожаловать на сайт</h2>
-  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit nihil, ad ducimus explicabo distinctio doloremque, quis obcaecati, similique fugit aperiam beatae maxime velit sequi modi eum tenetur illum quaerat ipsam.</p>
-  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit nihil, ad ducimus explicabo distinctio doloremque, quis obcaecati, similique fugit aperiam beatae maxime velit sequi modi eum tenetur illum quaerat ipsam.</p>
-  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit nihil, ad ducimus explicabo distinctio doloremque, quis obcaecati, similique fugit aperiam beatae maxime velit sequi modi eum tenetur illum quaerat ipsam.</p>
+  <h1 class="page-name">Главная страница</h1>
+  <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit nihil, ad ducimus explicabo distinctio doloremque, quis obcaecati, similique fugit aperiam beatae maxime velit sequi modi eum tenetur illum quaerat ipsam.</p>
+  <p class="page-second-name">Добро пожаловать на сайт</h2>
+  <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit nihil, ad ducimus explicabo distinctio doloremque, quis obcaecati, similique fugit aperiam beatae maxime velit sequi modi eum tenetur illum quaerat ipsam.</p>
+  <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit nihil, ad ducimus explicabo distinctio doloremque, quis obcaecati, similique fugit aperiam beatae maxime velit sequi modi eum tenetur illum quaerat ipsam.</p>
+  <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit nihil, ad ducimus explicabo distinctio doloremque, quis obcaecati, similique fugit aperiam beatae maxime velit sequi modi eum tenetur illum quaerat ipsam.</p>
 </body>
 </html>
